--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 
 
+
 /* Vertical Nav Bar */
 .sidenav {
     height: 100%;
@@ -32,6 +33,8 @@
     position: fixed;
     top: 0;
     width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   
   .navbar a {
@@ -39,9 +42,9 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 12px 12px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 18px;
   }
   
   .navbar a:hover {
@@ -49,11 +52,19 @@
     color: black;
   }
 
+  .card-body{
+    background-color: aquamarine;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
 /* Main Div in Body */
 .main {
     margin-left: 100px; /* Same as the width of the sidenav */
+    background-color: #818181;
     font-size: 28px; /* Increased text to enable scrolling */
     padding: 0px 10px;
+    padding-bottom: 25px;
   }
 
   /* Heading H1 */
@@ -65,6 +76,7 @@
   .contClass{
     margin-top: 5px;
     margin-left: 15px;
+    margin-bottom: 20px;
   }
   /* reference Heading */
   .topicClass{
@@ -82,6 +94,11 @@
 .descriptionClass{
     font-size: 18px;
     color: blue;
+}
+
+/* home button */
+.homeBtnColor{
+    background-color: white;
 }
 
 /* Footer */
