--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 /* Vertical Nav Bar */
 .sidenav {
     height: 100%;
-    width: 100px;
+    width: 150px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -12,18 +12,22 @@
     background-color: #111;
     overflow-x: hidden;
     padding-top: 20px;
+
   }
   
   .sidenav a {
+    background-color: #111;
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-size: 14px;
-    color: #818181;
+    font-size: 12px;
+    color: white;
     display: block;
+    font-weight: bold;
   }
   
   .sidenav a:hover {
-    color: #f1f1f1;
+    background-color: antiquewhite;
+    color: blue;
   }
 
 /* top menu bar */
@@ -60,7 +64,7 @@
 
 /* Main Div in Body */
 .main {
-    margin-left: 100px; /* Same as the width of the sidenav */
+    margin-left: 150px; /* Same as the width of the sidenav */
     background-color: #818181;
     font-size: 28px; /* Increased text to enable scrolling */
     padding: 0px 10px;
